CutFlowAnalyzer/scripts/forJpsi/SBATCHLOG/SBATCH_Charmonium_F.stderr
Info in <TUnixSystem::ACLiC>: creating shared library /fdata/scratch/dildick/DisplacedMuonJetAnalysis_2016/CMSSW_8_0_20/src/MuJetAnalysis/CutFlowAnalyzer/scripts/forJpsi/./jpsiScriptsSD_C.so
SysError in <TFile::TFile>: could not delete /fdata/scratch/dildick/DisplacedMuonJetAnalysis_2016/CMSSW_8_0_20/src/MuJetAnalysis/CutFlowAnalyzer/scripts/forJpsi/jpsiScriptsSD_C_ACLiC_dict_rdict.pcm (errno: 2) (No such file or directory)
Error in <ACLiC>: Dictionary generation failed!
input_line_10:2:3: error: use of undeclared identifier 'analysis'
 (analysis("Charmonium_F"))
  ^
